# LearningVulkan

./: Build.bat  CMakeLists.txt  README.md
Boilerplate/: Application.cpp  Application.h  Bitmap.h  Camera.cpp  Camera.h  Context.h  DebugMessenger.cpp  DebugMessenger.h  Defines.h  Device.cpp  Device.h  Entry.h  EventManager.cpp  EventManager.h  GltfModel.cpp  GltfModel.h  Initializer.cpp  Initializer.h  InputHandler.cpp  InputHandler.h  KeyCodes.h  Logger.cpp  Logger.h  Resources.h  SampleBase.cpp  SampleBase.h  Structures.h  Swapchain.cpp  Swapchain.h  Types.h  Utils.cpp  Utils.h  tiny_gltf.cpp
Boilerplate/Graphics/: FrameGraph.cpp  FrameGraph.h
Boilerplate/ProceduralMeshes/: Box.h  Cone.h  Sphere.h  Vertex.h
Boilerplate/RenderLayers/: RenderLayerBase.h  RenderLayerFirst.cpp  RenderLayerFirst.h  RenderLayerLast.cpp  RenderLayerLast.h  RenderLayerMesh.cpp  RenderLayerMesh.h  RenderLayerSkybox.cpp  RenderLayerSkybox.h
CMake/: AddDependencies.cmake
Samples/: CMakeLists.txt
Samples/Boxes/: Boxes.cpp  CMakeLists.txt  MeshRenderLayer.h
Samples/Boxes/Shaders/: Compile.bat  Cube.frag  Cube.vert  Fragment.spv  LightCube.frag  LightCube.vert  Vertex.spv
Samples/Cubes/: CMakeLists.txt  Cubes.cpp  FrameResources.h  Mesh.h
Samples/Cubes/Shaders/: Compile.bat  Cube.frag  Cube.vert  Fragment.spv  LightCube.vert  Shader.vert  Vertex.spv
Samples/GltfTest/: CMakeLists.txt  GltfTest.cpp
Samples/GltfTest/Shaders/: Cube.frag  Cube.vert  Fragment.spv  Vertex.spv
Samples/Triangle/: CMakeLists.txt  Triangle.cpp
Samples/Triangle/Shaders/: Fragment.spv  Shader.frag  Shader.vert  Vertex.spv
